package Practica9;

public class Computer{
    private boolean off = true;
    
    public boolean isOff() {
        return off;
    }
    
    public void turnOn() {
        on = true;
    }
    
    public void turnOff() {
        on = false;
    }
    
}
