package Practica9;

public class InterfaceConnectable {
    
    public boolean isOn() {
        return false;
    }
    
    public void turnOn() {
    }
    
    public void turnOff() {
    }
}
